# ubwg-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  RELEASE_NOTES.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: docker-publish.yml  test.yml
tests/: conftest.py  test_main.py
